Added the request to disclose the vulnerabiltiy in a responsible manner

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
               The concern about SDSLabs chat being integrated with facebook and Gtalk where in users are required to enter their username and password is dubious as the data is sent to facebook/google only and we <b>do not</b> keep its copy with us. They donot share the passwords with us and they use <a href="http://en.wikipedia.org/wiki/HTTP_Secure" >HTTPS </a> to secure all such communications.<p>
 
-              We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to <a href="https://sdslabs.co.in/contact">contact</a> us.
+              We want the users to know what ever minimal amount of personal information they have shard with us is kept safe with utmost care and is used in a responsible manner. If anyone feels that their is some vulnerability in the way we handle user's information than they are welcome to<a href="https://sdslabs.co.in/contact">contact</a> us and disclose the vulnerability to us in a responsible manner.
 	    </div>
         </div>
       </div>
